Fix footer .angled-header spacing and phone number

--- a/utils/front-end/scss/_layout.scss
+++ b/utils/front-end/scss/_layout.scss
@@ -97,12 +97,12 @@ footer > .container {
     padding-top: 30px;
 }
 
-footer ul li a {
+#footer-nav li a {
     display: inline-block;
     padding: 5px;
 }
 
-footer a {
+#footer-nav a {
     text-decoration: none;
     font-family: $mavenpro;
     font-weight: bold;
